opam-version: "2.0"
maintainer: "kevgathuku@users.noreply.github.com"
authors: ["Kevin"]

homepage: "https://github.com/kevgathuku/hello-caml"
bug-reports: "https://github.com/kevgathuku/hello-caml/issues"
dev-repo: "git+https://github.com/kevgathuku/hello-caml.git"
version: "dev"

# TODO Pick the relevant SPDX identifier <https://spdx.org/licenses/>
license: "Unlicense"

synopsis: "An Ocaml + Reaason starter project"

description: """
An Ocaml + Reaason starter project
"""

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune"
  "reason"
  "graphics" { >= "1.9.1" }
  "ocamlformat" { >= "0.19.0" }
]